@@ -1,8 +1,9 @@
 package example.substance.validation;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import example.GsrsModuleSubstanceApplication;
 import gsrs.security.GsrsSecurityUtils;
+import gsrs.security.UserRoleConfiguration;
 import gsrs.services.GroupService;
+import gsrs.services.PrivilegeService;
 import gsrs.springUtils.AutowireHelper;
 import gsrs.substances.tests.AbstractSubstanceJpaFullStackEntityTest;
 import gsrs.validator.DefaultValidatorConfig;
@@ -123,9 +124,9 @@ public class ValidationMessageFilterTest extends AbstractSubstanceJpaFullStackEn
         pConf = AutowireHelper.getInstance().autowireAndProxy(pConf);
         GsrsProcessingStrategyFactoryConfiguration.OverrideRule or1 = new GsrsProcessingStrategyFactoryConfiguration.OverrideRule();
         or1.setRegex(Pattern.compile(testTemplate));
-        or1.setUserRoles(Role.roles(Role.valueOf("Admin"), Role.valueOf("Approver")));
+        or1.setRulePrivileges(Arrays.asList("Approve Records", "Configure System"));
         or1.setNewMessageType(ValidationMessage.MESSAGE_TYPE.ERROR);
-        pConf.setOverrideRules(Arrays.asList(or1));
+        pConf.setOverrideRules(List.of(or1));
         pConf.setDefaultStrategy("ACCEPT_APPLY_ALL_WARNINGS");
 
         GsrsProcessingStrategyFactory gsrsProcessingStrategyFactory = new GsrsProcessingStrategyFactory(groupService, pConf);
@@ -142,11 +143,6 @@ public class ValidationMessageFilterTest extends AbstractSubstanceJpaFullStackEn
         assertEquals(true, hasRole);
         assertTrue(response2.getValidationMessages().size()==1);
         response2.getValidationMessages().forEach(vm -> {
-            // System.out.println(String.format("user: %s", currentUser));
-            // System.out.println(String.format("type: %s", vm.getMessageType()));
-            // System.out.println(String.format("message: %s", vm.getMessage()));
-            // System.out.println(String.format("messageId: %s", vm.getMessageId()));
-            // System.out.println(String.format("isError: %s", vm.isError()));
             assertTrue(vm.getMessageId().contains(testContains));
             assertEquals(testMessageType, vm.getMessageType().toString());
         });
@@ -173,11 +169,11 @@ public class ValidationMessageFilterTest extends AbstractSubstanceJpaFullStackEn
         pConf = AutowireHelper.getInstance().autowireAndProxy(pConf);
         GsrsProcessingStrategyFactoryConfiguration.OverrideRule or1 = new GsrsProcessingStrategyFactoryConfiguration.OverrideRule();
         or1.setRegex(Pattern.compile("W.*"));
-        or1.setUserRoles(Role.roles(Role.valueOf("Admin"), Role.valueOf("Approver")));
+        or1.setRulePrivileges(Collections.singletonList("Approve Records"));
         or1.setNewMessageType(ValidationMessage.MESSAGE_TYPE.NOTICE);
         GsrsProcessingStrategyFactoryConfiguration.OverrideRule or2 = new GsrsProcessingStrategyFactoryConfiguration.OverrideRule();
         or2.setRegex(Pattern.compile("W.*"));
-        or2.setUserRoles(Role.roles(Role.valueOf("DataEntry")));
+        or2.setRulePrivileges(Collections.singletonList("Edit"));
         or2.setNewMessageType(ValidationMessage.MESSAGE_TYPE.NOTICE);
         pConf.setOverrideRules(Arrays.asList(or1, or2));
         pConf.setDefaultStrategy("ACCEPT_APPLY_ALL_WARNINGS");
@@ -196,11 +192,6 @@ public class ValidationMessageFilterTest extends AbstractSubstanceJpaFullStackEn
         assertEquals(true, hasRole);
         assertTrue(response2.getValidationMessages().size()==1);
         response2.getValidationMessages().forEach(vm -> {
-            // System.out.println(String.format("user: %s", currentUser));
-            // System.out.println(String.format("type: %s", vm.getMessageType()));
-            // System.out.println(String.format("message: %s", vm.getMessage()));
-            // System.out.println(String.format("messageId: %s", vm.getMessageId()));
-            // System.out.println(String.format("isError: %s", vm.isError()));
             assertEquals(testMessageType, vm.getMessageType().toString());
         });
     }
@@ -235,8 +226,9 @@ public class ValidationMessageFilterTest extends AbstractSubstanceJpaFullStackEn
         if(type == ValidatorConfig.METHOD_TYPE.BATCH){
             builder.allowPossibleDuplicates(true);
         }
-//
-        if(GsrsSecurityUtils.hasAnyRoles(Role.SuperUpdate,Role.SuperDataEntry,Role.Admin)) {
+
+        PrivilegeService privilegeService = new PrivilegeService();
+        if(privilegeService.canUserPerform("Override Duplicate Checks") == UserRoleConfiguration.PermissionResult.MayPerform) {
             builder.allowPossibleDuplicates(true);
         }
 
